[gd_scene load_steps=5 format=3 uid="uid://qvy341r6lpec"]

[ext_resource type="Texture2D" uid="uid://dgye28cwfbcrv" path="res://TourAssets/spr_bluecar_0.png" id="1_63dag"]
[ext_resource type="Script" path="res://TourAssets/new_script.gd" id="1_brey0"]
[ext_resource type="Script" path="res://TourAssets/MyTruck.gd" id="3_64rtm"]
[ext_resource type="Texture2D" uid="uid://6w6ag2aojdgl" path="res://TourAssets/sprite6_0.png" id="3_arfdo"]

[node name="Testing" type="Node2D"]

[node name="MyVehicle" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.74902, 1, 1)
position = Vector2(322, 206)
texture = ExtResource("1_63dag")
script = ExtResource("1_brey0")
metadata/_edit_lock_ = true

[node name="WheelLabel" type="Label" parent="MyVehicle"]
offset_left = -314.0
offset_top = -193.0
offset_right = -240.0
offset_bottom = -170.0
text = "Wheels: 4"

[node name="SpeedLabel" type="Label" parent="MyVehicle"]
offset_left = -314.0
offset_top = -163.0
offset_right = -197.0
offset_bottom = -140.0
text = "Top Speed: 120"

[node name="PriceLabel" type="Label" parent="MyVehicle"]
offset_left = -314.0
offset_top = -130.0
offset_right = -197.0
offset_bottom = -107.0
text = "Price: 30000"

[node name="AccidentLabel" type="Label" parent="MyVehicle"]
offset_left = -314.0
offset_top = -100.0
offset_right = -183.0
offset_bottom = -77.0
text = "Accidents: 0"

[node name="MyTruck" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.74902, 1, 1)
position = Vector2(810, 241)
texture = ExtResource("3_arfdo")
script = ExtResource("3_64rtm")
